# macclean

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
Formula/: macclean.rb
docs/: HOMEBREW.md
docs/superpowers/plans/: 2026-05-30-macclean-v2.md  2026-05-30-macclean.md  2026-05-31-ux-simplification.md
docs/superpowers/specs/: 2026-05-30-macclean-design.md  2026-05-31-ux-simplification-design.md
macclean/: cli.py  completion.py
macclean.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
macclean/cleaners/: _dir_cleaners.py  agents.py  apps.py  brew.py  cargo.py  connections.py  crash_reports.py  docker.py  dupes.py  fonts.py  go_cache.py  gradle.py  health.py  installers.py  ios_backups.py  largest.py  login_items.py  memory.py  node.py  outdated.py  pip_cache.py  ports.py  privacy.py  projects.py  python_versions.py  quicklook.py  quit_apps.py  security.py  spotlight.py  stremio.py  system.py  timemachine.py  trash.py  uninstall.py  update.py  wifi.py  xcode.py  zsh.py
macclean/core/: config.py  disk.py  log.py  touchid.py  utils.py
src/: cli.rs  main.rs  ui.rs
src/cleaners/: agents.rs  apps.rs  brew.rs  browser.rs  cargo_cache.rs  connections.rs  crash_reports.rs  docker.rs  dupes.rs  fonts.rs  go_cache.rs  gradle.rs  health.rs  installers.rs  ios_backups.rs  largest.rs  login_items.rs  maven.rs  memory.rs  mod.rs  node.rs  outdated.rs  pip.rs  ports.rs  privacy.rs  projects.rs  python_versions.rs  quicklook.rs  quit_apps.rs  security.rs  spotlight.rs  stremio.rs  system.rs  timemachine.rs  trash.rs  uninstall.rs  update.rs  wifi.rs  xcode.rs  zsh.rs
src/core/: cmd.rs  fs.rs  mod.rs
tests/: test_cleaners.py  test_config.py  test_disk.py  test_log.py  test_utils.py
