[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "macclean"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "psutil>=5.9",
    "questionary>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.0"]

[project.scripts]
macclean = "macclean.cli:main"
macclean-complete = "macclean.completion:install"

[tool.setuptools.packages.find]
where = ["."]
include = ["macclean*"]
